// Vitest Snapshot v1

exports[`MigrationTransactionItem > should render in xs 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1src4hy"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4 text-sm"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="flex w-full items-center space-x-0 text-right"
            >
              <div
                class="w-0 flex-1 pr-2"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-hint-300 dark:text-theme-secondary-700 font-semibold text-sm"
                    data-testid="Address__address"
                  >
                    D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv
                  </span>
                </div>
              </div>
              <div
                class="shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Type
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="flex items-center space-x-2 text-theme-navy-600 hover:text-theme-navy-700"
                type="button"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                >
                  Migration Successful
                </span>
                <div
                  class="css-1fio4bh"
                  height="12"
                  width="12"
                >
                  <svg
                    id="chevron-right-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M3.063 1l3.8 3.8c.1.1.1.3 0 .4L3.063 9"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
              <div
                class="text-theme-hint-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MigrationTransactionItem > should render in xs 2`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1src4hy"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4 text-sm"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="flex w-full items-center space-x-0 text-right"
            >
              <div
                class="w-0 flex-1 pr-2"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-hint-300 dark:text-theme-secondary-700 font-semibold text-sm"
                    data-testid="Address__address"
                  >
                    D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv
                  </span>
                </div>
              </div>
              <div
                class="shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Type
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <button
                class="flex items-center space-x-2 text-theme-navy-600 hover:text-theme-navy-700"
                type="button"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                >
                  Migration Successful
                </span>
                <div
                  class="css-1fio4bh"
                  height="12"
                  width="12"
                >
                  <svg
                    id="chevron-right-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M3.063 1l3.8 3.8c.1.1.1.3 0 .4L3.063 9"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
              <div
                class="text-theme-hint-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MigrationTransactionItem > should render in xs 3`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1vhoczi"
        data-testid="TableRow"
      >
        <td
          class="w-3/5"
        >
          <div
            class="flex space-x-3 css-mx19qq"
          >
            <div
              class="flex flex-1 items-center overflow-auto"
            >
              <div
                class="text-theme-hint-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="ml-2 mr-3 shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                  />
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-hint-300 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-br23tb"
          >
            <button
              class="flex items-center space-x-3 text-theme-navy-600 hover:text-theme-navy-700"
              data-testid="MigrationTransactionItem__button"
              type="button"
            >
              <span
                class="whitespace-nowrap font-semibold"
              >
                Migration Successful
              </span>
              <div
                class="css-1fio4bh"
                height="12"
                width="12"
              >
                <svg
                  id="chevron-right-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M3.063 1l3.8 3.8c.1.1.1.3 0 .4L3.063 9"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MigrationTransactionItem > should render in xs 4`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1vhoczi"
        data-testid="TableRow"
      >
        <td
          class="w-3/5"
        >
          <div
            class="flex space-x-3 css-mx19qq"
          >
            <div
              class="flex flex-1 items-center overflow-auto"
            >
              <div
                class="text-theme-hint-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="ml-2 mr-3 shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                  />
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-hint-300 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-br23tb"
          >
            <button
              class="flex items-center space-x-3 text-theme-navy-600 hover:text-theme-navy-700"
              data-testid="MigrationTransactionItem__button"
              type="button"
            >
              <span
                class="whitespace-nowrap font-semibold"
              >
                Migration Successful
              </span>
              <div
                class="css-1fio4bh"
                height="12"
                width="12"
              >
                <svg
                  id="chevron-right-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M3.063 1l3.8 3.8c.1.1.1.3 0 .4L3.063 9"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`MigrationTransactionItem > should render in xs 5`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1vhoczi"
        data-testid="TableRow"
      >
        <td
          class="w-3/5"
        >
          <div
            class="flex space-x-3 css-mx19qq"
          >
            <div
              class="flex flex-1 items-center overflow-auto"
            >
              <div
                class="text-theme-hint-600 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="circle-check-mark"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="ml-2 mr-3 shrink-0 css-jxpwdn"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                    title="D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv"
                  />
                </div>
              </div>
              <div
                class="w-20 flex-1"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-theme-hint-300 dark:text-theme-secondary-700 font-semibold text-base"
                    data-testid="Address__address"
                  >
                    D5pVkhZbSb4UNXvfmF6j7zdau8yGxfKwSv
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-br23tb"
          >
            <button
              class="flex items-center space-x-3 text-theme-navy-600 hover:text-theme-navy-700"
              data-testid="MigrationTransactionItem__button"
              type="button"
            >
              <span
                class="whitespace-nowrap font-semibold"
              >
                Migration Successful
              </span>
              <div
                class="css-1fio4bh"
                height="12"
                width="12"
              >
                <svg
                  id="chevron-right-small"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M3.063 1l3.8 3.8c.1.1.1.3 0 .4L3.063 9"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
